--- a/Pages/Index.razor.Carusel.scss
+++ b/Pages/Index.razor.Carusel.scss
@@ -52,7 +52,7 @@
         padding-top: 35px;
         border-radius: 50%;
         box-shadow: none;
-        background-color: darkgray;
+        background-color: transparent;
 
         &:hover {
             background-color: #e2e2e2;
@@ -80,7 +80,7 @@
         padding-top: 35px;
         border-radius: 50%;
         box-shadow: none;
-        background-color: darkgray;
+        background-color: transparent;
 
         &:hover {
             background-color: #e2e2e2;
