--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -213,7 +213,7 @@ h1, h2, h3, h4, h5, h6 {
 .sidenav {
   display: none; }
 
-@media (max-width: 700px) {
+@media (max-width: 835px) {
   .sidenav {
     position: fixed;
     top: 0;
@@ -230,6 +230,12 @@ h1, h2, h3, h4, h5, h6 {
       margin: 0;
       margin-top: 0em;
       margin-right: 1.7em; }
+  .sidenav.expand100 {
+    width: 100%; }
+  .sidenav.expand75 {
+    width: 75%; }
+  .sidenav.close {
+    width: 0%; }
   .sidenav.scroling .closebtn {
     top: 15px;
     padding: 6px 6px 0px 0px; }
